// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox snapshots > should render the checked state 1`] = `
<DocumentFragment>
  <div
    class="_Checkbox_923e68"
    data-test-checkbox=""
  >
    <input
      checked=""
      class="_Checkbox__input_923e68"
      data-test-checkbox-input=""
      type="checkbox"
    />
    <div
      class="_Checkbox__input-wrapper_923e68"
    >
      <svg
        class="Icon"
        fill="none"
        height="8"
        style="color: var(--color-neutral-1);"
        viewBox="0 0 9 9"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.08463 0.210797C8.15986 0.104694 8.27348 0.0320833 8.40137 0.00837676C8.52926 -0.0153298 8.66136 0.0117335 8.76962 0.0838229C8.87789 0.155912 8.9538 0.267353 8.98125 0.394493C9.00869 0.521634 8.98552 0.654465 8.91663 0.764797L3.91663 8.2648C3.87543 8.32618 3.82119 8.37771 3.75777 8.4157C3.69435 8.45369 3.62332 8.4772 3.54976 8.48455C3.4762 8.49191 3.40192 8.48293 3.33223 8.45825C3.26255 8.43357 3.19917 8.39381 3.14663 8.3418L0.146631 5.3418C0.0527448 5.24791 0 5.12057 0 4.9878C0 4.85502 0.0527448 4.72768 0.146631 4.6338C0.240518 4.53991 0.367856 4.48717 0.500632 4.48717C0.633407 4.48717 0.760745 4.53991 0.854632 4.6338L3.42263 7.2028L8.08463 0.210797Z"
          data-svg-property="fill"
          fill="white"
        />
      </svg>
    </div>
    <span
      class="_Checkbox__label_923e68"
    >
      Clip content
    </span>
  </div>
</DocumentFragment>
`;

exports[`Checkbox snapshots > should render the mixed state 1`] = `
<DocumentFragment>
  <div
    class="_Checkbox_923e68"
    data-test-checkbox=""
  >
    <input
      class="_Checkbox__input_923e68"
      data-test-checkbox-input=""
      type="checkbox"
    />
    <div
      class="_Checkbox__input-wrapper_923e68"
    >
      <svg
        class="Icon"
        fill="none"
        height="8"
        style="color: var(--color-neutral-1);"
        viewBox="0 0 8 1"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0.5C0 0.632608 0.0526785 0.759786 0.146447 0.853554C0.240215 0.947322 0.367392 1 0.5 1H7.5C7.63261 1 7.75979 0.947322 7.85355 0.853554C7.94732 0.759786 8 0.632608 8 0.5C8 0.367392 7.94732 0.240215 7.85355 0.146447C7.75979 0.0526785 7.63261 0 7.5 0H0.5C0.367392 0 0.240215 0.0526785 0.146447 0.146447C0.0526785 0.240215 0 0.367392 0 0.5Z"
          data-svg-property="fill"
          fill="white"
        />
      </svg>
    </div>
    <span
      class="_Checkbox__label_923e68"
    >
      Clip content
    </span>
  </div>
</DocumentFragment>
`;

exports[`Checkbox snapshots > should render the unchecked state 1`] = `
<DocumentFragment>
  <div
    class="_Checkbox_923e68"
    data-test-checkbox=""
  >
    <input
      class="_Checkbox__input_923e68"
      data-test-checkbox-input=""
      type="checkbox"
    />
    <div
      class="_Checkbox__input-wrapper_923e68"
    />
    <span
      class="_Checkbox__label_923e68"
    >
      Clip content
    </span>
  </div>
</DocumentFragment>
`;
